# ZejfMeteo

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  plans.txt  variables.txt
core/: .clang-format  returns.txt  returns2.txt
core/api/: CMakeLists.txt
core/api/zejf_api/: CMakeLists.txt
core/api/zejf_api/inc/: zejf_api.h  zejf_defs.h
core/api/zejf_api/src/: data_check.c  data_check.h  data_info.c  data_info.h  data_request.c  data_request.h  linked_list.c  zejf_api.c  zejf_data.c  zejf_data.h  zejf_network.c  zejf_network.h  zejf_protocol.c  zejf_protocol.h  zejf_routing.c  zejf_routing.h
core/devices/ZejfMeteo/: CMakeLists.txt  README.md
core/devices/ZejfMeteo/src/: interface_manager.h  serial.c  server.c  server.h  time_utils.c  zejf_data_loader.c  zejf_meteo.c  zejf_settings.h
core/devices/ZejfOutside/: .gitignore  CMakeLists.txt
core/devices/ZejfOutside/src/: .zejf_comm.cpp.swp  lwipopts.h  zejf_comm.cpp  zejf_measure.cpp  zejf_measure.h  zejf_outside.cpp  zejf_outside.h  zejf_settings.h
core/devices/ZejfPress/: .gitignore  CMakeLists.txt
core/devices/ZejfPress/src/: zejf_press.cpp  zejf_press.h  zejf_settings.h
core/devices/ZejfPress/useful/: i2c_scan.c
core/devices/ZejfWind/: CMakeLists.txt
core/devices/ZejfWind/src/: lwipopts.h  zejf_comm.cpp  zejf_measure.cpp  zejf_measure.h  zejf_settings.h  zejf_wind.cpp  zejf_wind.h  zejf_wind.hpp
core/libs/: CMakeLists.txt
core/libs/FatFs_SPI/include/: rtc.h
core/libs/FatFs_SPI/src/: rtc.c
core/libs/bmp085/inc/: bmp085.h
core/libs/bmp085/src/: CMakeLists.txt  bmp085.c  bmp085.c_unfinished
core/libs/bmp390/: CMakeLists.txt  bmp390.h
core/libs/ds3231/: CMakeLists.txt  DS3231.cpp  DS3231.h
core/libs/htu21/inc/: htu21.h
core/libs/htu21/src/: CMakeLists.txt  htu21.c
core/libs/tcp_handler/: CMakeLists.txt  tcp_handler.c  tcp_handler.h
core/libs/zejf_pico_utils/inc/: sd_card_handler.h  time_engine.h  time_utils.h  zejf_pico_data.h  zejf_runtime.h
core/libs/zejf_pico_utils/src/: CMakeLists.txt  hw_config.cpp  sd_card_handler.cpp  time_engine.cpp  time_utils.cpp  zejf_pico_data.cpp  zejf_runtime.cpp
lib/zejf_api/inc/: dynamic_data.h  zejf_api.h  zejf_defs.h  zejf_network.h  zejf_protocol.h
lib/zejf_api/src/: CMakeLists.txt  data_check.c  data_check.h  data_info.c  data_info.h  data_request.c  data_request.h  dynamic_data.c  linked_list.c  linked_list.h  zejf_api.c  zejf_data.c  zejf_data.h  zejf_data_2.c  zejf_data_2.h  zejf_network.c  zejf_network.h  zejf_protocol.c  zejf_protocol.h  zejf_queue.c  zejf_queue.h  zejf_routing.c  zejf_routing.h
old/: data.h
release/: CMakeCache.txt  Makefile  cmake_install.cmake
release/lib/: Makefile  cmake_install.cmake
release/lib/zejf_api/: Makefile  cmake_install.cmake
release/lib/zejf_api/src/: Makefile  cmake_install.cmake
release/src/: Makefile  cmake_install.cmake  zejfmeteo_beta_1.1.2b
src/: CMakeLists.txt  arraylist.h  data.c  data.h  dynamic_data.c  dynamic_data.h  interface_manager.c  interface_manager.h  main.c  serial.c  serial.h  server.c  server.h  time_utils.c  time_utils.h  zejf_data_loader.c  zejf_data_loader.h  zejf_meteo.c  zejf_meteo.h  zejf_network.c  zejf_network.h  zejf_protocol.c  zejf_protocol.h  zejf_settings.h
test/: main.c
test/old/: dynamic_day_bad.c  dynamic_day_broken.c
viewer/: .gitignore  pom.xml
viewer/src/main/java/action/: CloseAction.java  IgnoreAction.java  TerminateAction.java
viewer/src/main/java/data/: CalculationMode.java  ComputationStatus.java  ComputedLog.java  ComputedVariable.java  DataHour.java  DataManager.java  DataVariable.java  VariableCalculation.java
viewer/src/main/java/data/computation/: ComputationMode.java  ComputationStatus.java  ComputedLog.java  ComputedVariable.java  DirectComputation.java  VariableComputation.java
viewer/src/main/java/exception/: ApplicationErrorHandler.java  ApplicationException.java  FatalApplicationException.java  FatalError.java  FatalIOException.java  RuntimeApplicationException.java
viewer/src/main/java/main/: Main.java  Settings.java  ZejfMeteo.java
viewer/src/main/java/socket/: Packet.java  SocketManager.java  ZejfCommunicator.java  ZejfReader.java
viewer/src/main/java/time/: TimeUtils.java
viewer/src/main/java/ui/: BetterRealtimePanel.java  ComputationEditor.java  ComputationsManager.java  GraphCanvasPanel.java  SimpleGraphsPanel.java  SimpleRealtimePanel.java  ZejfFrame.java
